<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lfg.morgantenney.capsa.GardenConnectActivity">


    <TextView
        android:id="@+id/connectInfoTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_string"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/skipInfoTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_connect_string"
        android:layout_below="@id/connectInfoTextview"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/skip_connect"/>

    <Button
        android:id="@+id/startConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_connecting"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/skipButton"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</RelativeLayout>
